bridging/LabSoundHelper.h

void AudioParam_exponentialRampToValueAtTime(int nodeId, int paramIndex,float value,float time);
void AudioParam_linearRampToValueAtTime(int nodeId, int paramIndex, float value,float time);
void AudioParam_setTargetAtTime(int nodeId, int paramIndex, float target, float time, float timeConstant);
float AudioParam_minValue(int nodeId, int paramIndex);
void AudioParam_resetSmoothedValue(int nodeId, int paramIndex);
void AudioParam_setSmoothingConstant(int nodeId, int paramIndex, double k);
int AudioParam_hasSampleAccurateValues(int nodeId, int paramIndex);
/// AudioNode

int AudioNode_isScheduledNode(int nodeId);
int AudioNode_numberOfInputs(int nodeId);
int AudioNode_numberOfOutputs(int nodeId);
int AudioNode_channelCount(int nodeId);
void AudioNode_reset(int nodeId, AudioContext* context);
void releaseNode(int nodeId);
/// AudioScheduledSourceNode

int AudioScheduledSourceNode_isPlayingOrScheduled(int nodeId);
void AudioScheduledSourceNode_stop(int nodeId, float when);
int AudioScheduledSourceNode_hasFinished(int nodeId);
uint64_t AudioScheduledSourceNode_startWhen(int nodeId);
void AudioScheduledSourceNode_start(int nodeId, float when);
int AudioScheduledSourceNode_playbackState(int nodeId);
/// SampledAudioNode

int createAudioSampleNode(AudioContext* context);
void SampledAudioNode_setBus(int nodeIndex, AudioContext* context, int busIndex);
void SampledAudioNode_schedule(int nodeId, double when);
void SampledAudioNode_schedule2(int nodeId, double when, double grainOffset);
void SampledAudioNode_schedule3(int nodeId, double when, double grainOffset, double grainDuration);