lib/generated_bindings.dart


  late final _AudioParam_exponentialRampToValueAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_exponentialRampToValueAtTime>>(
          'AudioParam_exponentialRampToValueAtTime');
  late final _dart_AudioParam_exponentialRampToValueAtTime
      _AudioParam_exponentialRampToValueAtTime =
      _AudioParam_exponentialRampToValueAtTime_ptr.asFunction<
          _dart_AudioParam_exponentialRampToValueAtTime>();

  void AudioParam_linearRampToValueAtTime(
    int nodeId,
    int paramIndex,
    double value,
    double time,
  ) {
    return _AudioParam_linearRampToValueAtTime(
      nodeId,
      paramIndex,
      value,
      time,
    );
  }

  late final _AudioParam_linearRampToValueAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_linearRampToValueAtTime>>(
          'AudioParam_linearRampToValueAtTime');
  late final _dart_AudioParam_linearRampToValueAtTime
      _AudioParam_linearRampToValueAtTime =
      _AudioParam_linearRampToValueAtTime_ptr.asFunction<
          _dart_AudioParam_linearRampToValueAtTime>();

  void AudioParam_setTargetAtTime(
    int nodeId,
    int paramIndex,
    double target,
    double time,
    double timeConstant,
  ) {
    return _AudioParam_setTargetAtTime(
      nodeId,
      paramIndex,
      target,
      time,
      timeConstant,
    );
  }

  late final _AudioParam_setTargetAtTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setTargetAtTime>>(
          'AudioParam_setTargetAtTime');
  late final _dart_AudioParam_setTargetAtTime _AudioParam_setTargetAtTime =
      _AudioParam_setTargetAtTime_ptr.asFunction<
          _dart_AudioParam_setTargetAtTime>();

  double AudioParam_minValue(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_minValue(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_minValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_minValue>>(
          'AudioParam_minValue');
  late final _dart_AudioParam_minValue _AudioParam_minValue =
      _AudioParam_minValue_ptr.asFunction<_dart_AudioParam_minValue>();

  void AudioParam_resetSmoothedValue(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_resetSmoothedValue(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_resetSmoothedValue_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_resetSmoothedValue>>(
          'AudioParam_resetSmoothedValue');
  late final _dart_AudioParam_resetSmoothedValue
      _AudioParam_resetSmoothedValue = _AudioParam_resetSmoothedValue_ptr
          .asFunction<_dart_AudioParam_resetSmoothedValue>();

  void AudioParam_setSmoothingConstant(
    int nodeId,
    int paramIndex,
    double k,
  ) {
    return _AudioParam_setSmoothingConstant(
      nodeId,
      paramIndex,
      k,
    );
  }

  late final _AudioParam_setSmoothingConstant_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_setSmoothingConstant>>(
          'AudioParam_setSmoothingConstant');
  late final _dart_AudioParam_setSmoothingConstant
      _AudioParam_setSmoothingConstant = _AudioParam_setSmoothingConstant_ptr
          .asFunction<_dart_AudioParam_setSmoothingConstant>();

  int AudioParam_hasSampleAccurateValues(
    int nodeId,
    int paramIndex,
  ) {
    return _AudioParam_hasSampleAccurateValues(
      nodeId,
      paramIndex,
    );
  }

  late final _AudioParam_hasSampleAccurateValues_ptr =
      _lookup<ffi.NativeFunction<_c_AudioParam_hasSampleAccurateValues>>(
          'AudioParam_hasSampleAccurateValues');
  late final _dart_AudioParam_hasSampleAccurateValues
      _AudioParam_hasSampleAccurateValues =
      _AudioParam_hasSampleAccurateValues_ptr.asFunction<
          _dart_AudioParam_hasSampleAccurateValues>();

  /// AudioNode
  int AudioNode_isScheduledNode(
    int nodeId,
  ) {
    return _AudioNode_isScheduledNode(
      nodeId,
    );
  }

  late final _AudioNode_isScheduledNode_ptr =
      _lookup<ffi.NativeFunction<_c_AudioNode_isScheduledNode>>(
          'AudioNode_isScheduledNode');
  late final _dart_AudioNode_isScheduledNode _AudioNode_isScheduledNode =
      _AudioNode_isScheduledNode_ptr.asFunction<
          _dart_AudioNode_isScheduledNode>();

  int AudioNode_numberOfInputs(
    int nodeId,
  ) {
    return _AudioNode_numberOfInputs(
      nodeId,
    );
  }

  late final _AudioNode_numberOfInputs_ptr =
      _lookup<ffi.NativeFunction<_c_AudioNode_numberOfInputs>>(
          'AudioNode_numberOfInputs');
  late final _dart_AudioNode_numberOfInputs _AudioNode_numberOfInputs =
      _AudioNode_numberOfInputs_ptr.asFunction<
          _dart_AudioNode_numberOfInputs>();

  int AudioNode_numberOfOutputs(
    int nodeId,
  ) {
    return _AudioNode_numberOfOutputs(
      nodeId,
    );
  }

  late final _AudioNode_numberOfOutputs_ptr =
      _lookup<ffi.NativeFunction<_c_AudioNode_numberOfOutputs>>(
          'AudioNode_numberOfOutputs');
  late final _dart_AudioNode_numberOfOutputs _AudioNode_numberOfOutputs =
      _AudioNode_numberOfOutputs_ptr.asFunction<
          _dart_AudioNode_numberOfOutputs>();

  int AudioNode_channelCount(
    int nodeId,
  ) {
    return _AudioNode_channelCount(
      nodeId,
    );
  }

  late final _AudioNode_channelCount_ptr =
      _lookup<ffi.NativeFunction<_c_AudioNode_channelCount>>(
          'AudioNode_channelCount');
  late final _dart_AudioNode_channelCount _AudioNode_channelCount =
      _AudioNode_channelCount_ptr.asFunction<_dart_AudioNode_channelCount>();

  void AudioNode_reset(
    int nodeId,
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _AudioNode_reset(
      nodeId,
      context,
    );
  }

  late final _AudioNode_reset_ptr =
      _lookup<ffi.NativeFunction<_c_AudioNode_reset>>('AudioNode_reset');
  late final _dart_AudioNode_reset _AudioNode_reset =
      _AudioNode_reset_ptr.asFunction<_dart_AudioNode_reset>();

  void releaseNode(
    int nodeId,
  ) {
    return _releaseNode(
      nodeId,
    );
  }

  late final _releaseNode_ptr =
      _lookup<ffi.NativeFunction<_c_releaseNode>>('releaseNode');
  late final _dart_releaseNode _releaseNode =
      _releaseNode_ptr.asFunction<_dart_releaseNode>();

  /// AudioScheduledSourceNode
  int AudioScheduledSourceNode_isPlayingOrScheduled(
    int nodeId,
  ) {
    return _AudioScheduledSourceNode_isPlayingOrScheduled(
      nodeId,
    );
  }

  late final _AudioScheduledSourceNode_isPlayingOrScheduled_ptr = _lookup<
          ffi.NativeFunction<_c_AudioScheduledSourceNode_isPlayingOrScheduled>>(
      'AudioScheduledSourceNode_isPlayingOrScheduled');
  late final _dart_AudioScheduledSourceNode_isPlayingOrScheduled
      _AudioScheduledSourceNode_isPlayingOrScheduled =
      _AudioScheduledSourceNode_isPlayingOrScheduled_ptr.asFunction<
          _dart_AudioScheduledSourceNode_isPlayingOrScheduled>();

  void AudioScheduledSourceNode_stop(
    int nodeId,
    double when,
  ) {
    return _AudioScheduledSourceNode_stop(
      nodeId,
      when,
    );
  }

  late final _AudioScheduledSourceNode_stop_ptr =
      _lookup<ffi.NativeFunction<_c_AudioScheduledSourceNode_stop>>(
          'AudioScheduledSourceNode_stop');
  late final _dart_AudioScheduledSourceNode_stop
      _AudioScheduledSourceNode_stop = _AudioScheduledSourceNode_stop_ptr
          .asFunction<_dart_AudioScheduledSourceNode_stop>();

  int AudioScheduledSourceNode_hasFinished(
    int nodeId,
  ) {
    return _AudioScheduledSourceNode_hasFinished(
      nodeId,
    );
  }

  late final _AudioScheduledSourceNode_hasFinished_ptr =
      _lookup<ffi.NativeFunction<_c_AudioScheduledSourceNode_hasFinished>>(
          'AudioScheduledSourceNode_hasFinished');
  late final _dart_AudioScheduledSourceNode_hasFinished
      _AudioScheduledSourceNode_hasFinished =
      _AudioScheduledSourceNode_hasFinished_ptr.asFunction<
          _dart_AudioScheduledSourceNode_hasFinished>();

  int AudioScheduledSourceNode_startWhen(
    int nodeId,
  ) {
    return _AudioScheduledSourceNode_startWhen(
      nodeId,
    );
  }

  late final _AudioScheduledSourceNode_startWhen_ptr =
      _lookup<ffi.NativeFunction<_c_AudioScheduledSourceNode_startWhen>>(
          'AudioScheduledSourceNode_startWhen');
  late final _dart_AudioScheduledSourceNode_startWhen
      _AudioScheduledSourceNode_startWhen =
      _AudioScheduledSourceNode_startWhen_ptr.asFunction<
          _dart_AudioScheduledSourceNode_startWhen>();

  void AudioScheduledSourceNode_start(
    int nodeId,
    double when,
  ) {
    return _AudioScheduledSourceNode_start(
      nodeId,
      when,
    );
  }

  late final _AudioScheduledSourceNode_start_ptr =
      _lookup<ffi.NativeFunction<_c_AudioScheduledSourceNode_start>>(
          'AudioScheduledSourceNode_start');
  late final _dart_AudioScheduledSourceNode_start
      _AudioScheduledSourceNode_start = _AudioScheduledSourceNode_start_ptr
          .asFunction<_dart_AudioScheduledSourceNode_start>();

  int AudioScheduledSourceNode_playbackState(
    int nodeId,
  ) {
    return _AudioScheduledSourceNode_playbackState(
      nodeId,
    );
  }

  late final _AudioScheduledSourceNode_playbackState_ptr =
      _lookup<ffi.NativeFunction<_c_AudioScheduledSourceNode_playbackState>>(
          'AudioScheduledSourceNode_playbackState');
  late final _dart_AudioScheduledSourceNode_playbackState
      _AudioScheduledSourceNode_playbackState =
      _AudioScheduledSourceNode_playbackState_ptr.asFunction<
          _dart_AudioScheduledSourceNode_playbackState>();

  /// SampledAudioNode
  int createAudioSampleNode(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _createAudioSampleNode(
      context,
    );
  }

  late final _createAudioSampleNode_ptr =
      _lookup<ffi.NativeFunction<_c_createAudioSampleNode>>(
          'createAudioSampleNode');
  late final _dart_createAudioSampleNode _createAudioSampleNode =
      _createAudioSampleNode_ptr.asFunction<_dart_createAudioSampleNode>();

  void SampledAudioNode_setBus(
    int nodeIndex,
    ffi.Pointer<ffi.Int32> context,
    int busIndex,
  ) {
    return _SampledAudioNode_setBus(
      nodeIndex,
      context,
      busIndex,
    );
  }

  late final _SampledAudioNode_setBus_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_setBus>>(
          'SampledAudioNode_setBus');
  late final _dart_SampledAudioNode_setBus _SampledAudioNode_setBus =
      _SampledAudioNode_setBus_ptr.asFunction<_dart_SampledAudioNode_setBus>();

  void SampledAudioNode_schedule(
    int nodeId,
    double when,
  ) {
    return _SampledAudioNode_schedule(
      nodeId,
      when,
    );
  }

  late final _SampledAudioNode_schedule_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_schedule>>(
          'SampledAudioNode_schedule');
  late final _dart_SampledAudioNode_schedule _SampledAudioNode_schedule =
      _SampledAudioNode_schedule_ptr.asFunction<
          _dart_SampledAudioNode_schedule>();

  void SampledAudioNode_schedule2(
    int nodeId,
    double when,
    double grainOffset,
  ) {
    return _SampledAudioNode_schedule2(
      nodeId,
      when,
      grainOffset,
    );
  }

  late final _SampledAudioNode_schedule2_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_schedule2>>(
          'SampledAudioNode_schedule2');
  late final _dart_SampledAudioNode_schedule2 _SampledAudioNode_schedule2 =
      _SampledAudioNode_schedule2_ptr.asFunction<
          _dart_SampledAudioNode_schedule2>();

  void SampledAudioNode_schedule3(
    int nodeId,
    double when,
    double grainOffset,
    double grainDuration,
  ) {
    return _SampledAudioNode_schedule3(
      nodeId,
      when,
      grainOffset,
      grainDuration,
    );
  }

  late final _SampledAudioNode_schedule3_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_schedule3>>(
          'SampledAudioNode_schedule3');
  late final _dart_SampledAudioNode_schedule3 _SampledAudioNode_schedule3 =
      _SampledAudioNode_schedule3_ptr.asFunction<
          _dart_SampledAudioNode_schedule3>();
